Closed
Bug 1325255
Opened 9 years ago
Closed 9 years ago
Crash in mozalloc_abort | NS_DebugBreak | mozilla::ipc::FatalError | mozilla::dom::PContentChild::SendPURLClassifierConstructor
Categories
(Toolkit :: Safe Browsing, defect)
Tracking
()
RESOLVED
FIXED
mozilla53
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | unaffected |
| firefox51 | --- | unaffected |
| firefox52 | --- | unaffected |
| firefox53 | + | fixed |
People
(Reporter: ting, Assigned: ehsan.akhgari)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
|
2.91 KB,
patch
|
bkelly
:
review+
gchang
:
approval-mozilla-aurora-
|
Details | Diff | Splinter Review |
|
2.94 KB,
patch
|
jcristau
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-991cd764-a8fc-43ca-8063-dbcc02161220.
=============================================================
Top #40 of Nightly 20161218030213 on Windows, 5 crashes from 4 installations. The first appearance was on build 20161203030204.
The fatal error has message: IPDL error [PContentChild]: \"constructor for actor failed" }
| Assignee | ||
Comment 2•9 years ago
|
||
I bet this is coming from <http://searchfox.org/mozilla-central/rev/ac40ca3ec39efe85bfb111274c10ee4ceea5bb7a/dom/ipc/ContentParent.cpp#4797>.
Assignee: nobody → ehsan
Flags: needinfo?(ehsan)
| Assignee | ||
Comment 3•9 years ago
|
||
It looks like these crashes are all happening during shutdown. bkelly's theory is that <https://dxr.mozilla.org/mozilla-central/rev/f179934df0c1bab590c558485d419c7910e41325/ipc/glue/BackgroundUtils.cpp#163> may fail, and I think that's a valid theory for why deserializing the principal might fail.
| Assignee | ||
Updated•9 years ago
|
Blocks: 1321868
Keywords: regression
| Assignee | ||
Updated•9 years ago
|
tracking-firefox53:
--- → ?
| Assignee | ||
Comment 4•9 years ago
|
||
Attachment #8821265 -
Flags: review?(bkelly)
Updated•9 years ago
|
Attachment #8821265 -
Flags: review?(bkelly) → review+
Pushed by eakhgari@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/589d4766042e
Don't crash during shutdown if the deserialization of the principal fails; r=bkelly
Comment 7•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Updated•9 years ago
|
status-firefox50:
--- → unaffected
status-firefox51:
--- → unaffected
status-firefox52:
--- → unaffected
Updated•9 years ago
|
Version: unspecified → Trunk
Comment 8•9 years ago
|
||
Comment on attachment 8821265 [details] [diff] [review]
Don't crash during shutdown if the deserialization of the principal fails
Approval Request Comment
[Feature/Bug causing the regression]: This feature is needed for the Shield study to be run on Release 52 (bug 1335232), which we'll use to study the effect of making flash click-to-play by default.
[User impact if declined]: Can't run the study as intended
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: Not for this feature independently. We'll do QE on the study as a whole to make sure all pieces work as expected
[List of other uplifts needed for the feature/fix]: Bug 1318768, Bug 1323220, Bug 1325255, Bug 1322204, Bug 1325651, Bug 1319571, Bug 1321377, Bug 1307604, Bug 1323064, Bug 1335549, Bug 1333303, Bug 1333483, Bug 1336714, Bug 1338287
[Is the change risky?]: No
[Why is the change risky/not risky?]: Fixes Bug 1318768
[String changes made/needed]: none
Attachment #8821265 -
Flags: approval-mozilla-aurora?
Comment 9•9 years ago
|
||
Attachment #8837399 -
Flags: approval-mozilla-beta?
Comment 10•9 years ago
|
||
Comment on attachment 8821265 [details] [diff] [review]
Don't crash during shutdown if the deserialization of the principal fails
It's been in Aurora53 already. No need to uplift to aurora again.
Attachment #8821265 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora-
Comment 11•9 years ago
|
||
Comment on attachment 8837399 [details] [diff] [review]
Don't crash during shutdown if the deserialization of the principal fails (beta uplift)
this was deemed too risky for beta
Attachment #8837399 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in
before you can comment on or make changes to this bug.
Description
•