Bug 1325255 - Don't crash during shutdown if the deserialization of the principal fails; r=bkelly